codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__experimental_features_view__tests__experimental_features_keep_following_choice_at_wrap_boundary.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
width=68

  Experimental features
  Checked features are configured on. Some experimental features
  take effect only in new tasks or after restarting the Zuno
  server.


› [x] First feature  A description that fits exactly at this
                     boundary.
  [ ] Last feature   Keep this choice visible.


  space toggle · enter save · esc save/close

width=69

  Experimental features
  Checked features are configured on. Some experimental features
  take effect only in new tasks or after restarting the Zuno
  server.


› [x] First feature  A description that fits exactly at this
                     boundary.
  [ ] Last feature   Keep this choice visible.


  space toggle · enter save · esc save/close

width=70

  Experimental features
  Checked features are configured on. Some experimental features
  take effect only in new tasks or after restarting the Zuno server.


› [x] First feature  A description that fits exactly at this boundary.
  [ ] Last feature   Keep this choice visible.


  space toggle · enter save · esc save/close

width=71

  Experimental features
  Checked features are configured on. Some experimental features take
  effect only in new tasks or after restarting the Zuno server.


› [x] First feature  A description that fits exactly at this boundary.
  [ ] Last feature   Keep this choice visible.


  space toggle · enter save · esc save/close

width=72

  Experimental features
  Checked features are configured on. Some experimental features take
  effect only in new tasks or after restarting the Zuno server.


› [x] First feature  A description that fits exactly at this boundary.
  [ ] Last feature   Keep this choice visible.


  space toggle · enter save · esc save/close
