codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__experimental_features_view__tests__experimental_features_saving.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Zuno server.
  Saving experimental features…


› [ ] Server network_proxy       Description supplied by the server.
  [ ] Server future_feature      Description supplied by the server.
  [ ] Server prevent_idle_sleep  Description supplied by the server.


  Saving… Closing this popup will not cancel the write.
